로그아웃 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
         </tr>
       <% } %>
     </table>
-  <a href="/"><input type="button" value="로그아웃"></a>
+  <a href="/lgo"><input type="button" value="로그아웃"></a>
     </center>
   </body>
 </html>
