--- a/views/lgi.ejs
+++ b/views/lgi.ejs
@@ -5,11 +5,12 @@
         <body>
             <center>
             <h1> 로그인 되었습니다. </h1>
-            <h1> 아이디 : <%= id %></h1>
-            <h1> 비밀번호 : <%= pw %></h1>
+            <h1> 아이디 : <%= ID %></h1>
+            <h1> 비밀번호 : <%= PW %></h1>
             <form action="/lgi" method="post">
             <a href="/user"><input type="button" value="목록으로 가기"></a>
-            <a href="/"><input type="button" value="로그아웃"></a>
+            <a href="/"><input type="button" value="홈으로"></a>
+            <a href="/lgo"><input type="button" value="로그아웃"></a>
             </form>
             </center>
         </body>
