게시판 추가

--- a/views/lgi.ejs
+++ b/views/lgi.ejs
@@ -8,6 +8,9 @@
             <h1> 아이디 : <%= ID %></h1>
             <h1> 비밀번호 : <%= PW %></h1>
             <form action="/lgi" method="post">
+              <td>
+                <a href="/board/board"><p>게시판 이동하기</p></a>
+            </td>
             <a href="/user"><input type="button" value="목록으로 가기"></a>
             <a href="/"><input type="button" value="홈으로"></a>
             <a href="/lgo"><input type="button" value="로그아웃"></a>
