카카오 로그인 버튼

--- a/views/lgg.ejs
+++ b/views/lgg.ejs
@@ -103,6 +103,7 @@ var pw = $('#pw').val();
           <input type="password" name="pw" id="pw" placeholder="비밀번호를 입력하세요">
           </div>
           <button class="bt-login" onclick="click_check();">로그인</button>
+          
      <table align="center" height="50">
           <tr>
                <td><a style="text-decoration:none;" href="sigu">회원가입 | </a></td>
@@ -112,5 +113,6 @@ var pw = $('#pw').val();
      </table>
      </div>
         </form>
+        <a href="auth/kakao"><input type="button" value="카카오 로그인"></a>
 </body>
 </html>
